--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Recipes</title>
 </head>
 <body>
-    <h1>Recipes.</h1>
+    <h1>Recipes</h1>
     <ul>
     <li><a href="recipes/soup.html">Butternut Squash Soup</a></li>
     <li><a href="recipes/cake.html">Sponge Cake</a></li>
